# soda-validate-sdrig-sdk-py

./: .dockerignore  .env  .env.example  .gitignore  AVTP.py  DOCKER.md  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_simple_tests.py  run_tests.sh  run_unit_tests_manual.py  setup.py  soda_xil_fd.dbc
docs/: README.md  getting-started.md
docs/api/: can-protocol.md
docs/guides/: eload-device.md  ifmux-device.md  lin-interface.md  uio-device.md
examples/: 01_device_discovery.py  02_uio_voltage_control.py  02b_uio_current_control.py  03_uio_pwm_control.py  03b_uio_pwm_input.py  04_eload_control.py  05_can_communication.py  06_lin_communication.py  uio_pin_control_example.py
scripts/: AVTP.py  AvtpCanManager.py  app_lan_load.py  app_reader.py  app_updater.py  bl_updater.py  can_send.py  can_sniff.py  devices_list.py  pins_read.py  pins_write.py  pins_write_tamplate.py
sdrig/: README.md  __init__.py  config.py  sdk.py
sdrig/core/: base.py  bus.py  metrics.py  presets.py  watchdog.py
sdrig/devices/: device_eload.py  device_ifmux.py  device_sdr.py  device_uio.py
sdrig/examples/: can_filter_pcap_v2.py  can_raw_io_v2.py  elm_presets.py  list_devices.py  list_deviceses.py  mux_preset_dsl_v2.py  mux_presets.py  pcap_capture_v2.py  uio_preset_dsl_v2.py  uio_presets.py
sdrig/modules/: elm.py  mux.py  uio.py
sdrig/protocol/: avtp.py  avtp_manager.py  can_messages.py  can_protocol.py
sdrig/transport/: avtp_acf.py  avtp_can_manager.py  canio.py  dbc_codec.py  j1939.py
sdrig/types/: enums.py  structs.py
sdrig/utils/: device_manager.py  logger.py  task_monitor.py
tests/: README.md  test_all_messages_detailed.py  test_integration_all_messages.py  test_official_manual_compliance.py
tests/unit/: README.md  __init__.py  conftest.py  test_can_protocol.py  test_device_eload.py  test_device_uio.py  test_enums.py
